<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoSky</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Message</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="server_name">Server</string>
    <string name="interval_seconds">Seconds</string>
    <string name="wifiOn">Wifi</string>
    <string name="wifiOff">Wifi</string>
    <string name="dataOn">Data</string>
    <string name="dataOff">Data</string>
    <string name="hdrOn">HDR</string>
    <string name="hdrOff">HDR</string>
    <string name="nightModeOn">Night</string>
    <string name="nightModeOff">Night</string>
    <string name="no_wifi_present">Your device does not support WIFI networking. WIFI functionality disabled.</string>
    <string name="externalStorageUnavailable">External storage is inavailable. Using internal storage.</string>
    <string name="cameraUnavailable">External storage is inavailable. Using internal storage.</string>
    <string name="hdrUnavailable">High Dynamic Range scene mode seems to be unavailable on this device. HDR cannot be used.</string>
    <string name="identifierKeyDummyText">ok234okij34i</string>

    <!-- General prefs -->
    <string name="pref_general">General</string>
    <string name="pref_serverUrl_title">Enter server URL</string>
    <string name="pref_serverUrl_summary">Server url where your upload script is installed to.</string>
    <string name="pref_interval_title">Select interval</string>
    <string name="pref_interval_summary">Select interval in seconds.</string>
    <string name="pref_intervalDefault">5</string>

    <string-array name="pref_intervalValues">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_intervalNames">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
    </string-array>

    <!-- Camera prefs -->
    <string name="pref_camera">Camera settings</string>
    <string name="pref_pictureSize_title">Picture size</string>
    <string name="pref_pictureSize_summary">Select the picture size for snapshots</string>
    <string name="pref_sceneMode_title">Scene mode</string>
    <string name="pref_sceneMode_summary">Select the scene mode for snapshots</string>

    <!-- Conversion preferences -->
    <string name="pref_lens_and_conversion">Lens and conversion</string>
    <string name="pref_conversion_algorithm_title">Algorithm</string>
    <string name="pref_conversion_algorithm_summary">Select the algorithm to be used when converting uploaded images on the server</string>

    <string-array name="pref_conversion_algorithm_values">
        <item>Fisheye2Panorama</item>
        <item>Fisheye2Plain</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_conversion_algorithm_names">
        <item>Fisheye to 360 degrees panorama</item>
        <item>Fisheye plain</item>
        <item>None</item>
    </string-array>
    
    <!-- menu -->
    <string name="menu_settings">Settings</string>
    <string name="identifierKeyLabel">Your identifier key is</string>

</resources>