<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_general" >
        <EditTextPreference
            android:key="prefServerUrl"
            android:summary="@string/pref_serverUrl_summary"
            android:title="@string/pref_serverUrl_title" />

        <ListPreference
            android:defaultValue="@string/pref_intervalDefault"
            android:entries="@array/pref_intervalNames"
            android:entryValues="@array/pref_intervalValues"
            android:key="prefInterval"
            android:summary="@string/pref_interval_summary"
            android:title="@string/pref_interval_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_camera" >
        <ListPreference
            android:key="prefPictureSize"
            android:summary="@string/pref_pictureSize_summary"
            android:title="@string/pref_pictureSize_title" />
        <ListPreference
            android:key="prefSceneMode"
            android:summary="@string/pref_sceneMode_summary"
            android:title="@string/pref_sceneMode_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_lens_and_conversion" >
        <ListPreference
            android:defaultValue="Fisheye2Panorama"
            android:key="prefLensConversion"
            android:summary="@string/pref_conversion_algorithm_summary"
            android:title="@string/pref_conversion_algorithm_title"
            android:entries="@array/pref_conversion_algorithm_names"
            android:entryValues="@array/pref_conversion_algorithm_values" />
    </PreferenceCategory>

</PreferenceScreen>